--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<html>NOTHING</html>
+<html>
+
+	<head>
+		<title>mkdir Toturial_laptop</title>
+	</head>
+
+
+		<p>vim index.html</p>
+		<p>git init</p>
+		<p>git config --global user.name "arvin hao"</p>
+		<p>git config --global user.email "xxxx@xxx.com"</p>
+		<p>git add index.html</p>
+		<p>git commit -m "first initial commit"</p>
+
+		<p>git remote add origin https://github.com/Arvinhao/Tutorial_laptop.git</p>
+		<p>git pull origin master</p>
+		<p>help:git status, git branch, git remote -v</p>
+		<p>git push -u origin master</p>
+	</body>
+
+</html>
