Second, add tips

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 	<head>
 		<title>mkdir Toturial_laptop</title>
 	</head>
-
+	<body>
+<!-- 
+	git -v; git remote -v; git status; git branch; git push -u origin master -f(强制push);
+-->
 
 		<p>vim index.html</p>
 		<p>git init</p>
@@ -14,7 +17,6 @@
 
 		<p>git remote add origin https://github.com/Arvinhao/Tutorial_laptop.git</p>
 		<p>git pull origin master</p>
-		<p>help:git status, git branch, git remote -v</p>
 		<p>git push -u origin master</p>
 	</body>
 
